# cflarepy

./: .envrc  .gitignore  README.md  cli.py  noxfile.py  pyproject.toml
.data/cf_waf_filter_rules/: block_ips.txt  countries.txt  ua_strings.txt
.data/cf_waf_filter_rules/raw/: common.json
.old/: .pre-commit-config.yaml  README.md  cli.py  ruff.toml
.old/config/: settings.toml
.old/config/cloudflare/: .secrets.toml  settings.toml
.old/notebooks/: proto.ipynb
.old/sandbox/cloudflare/: ctl.py
.old/src/cflarepy/cli/: __main__.py
.old/src/cflarepy/cli/cf/: __init__.py  main.py
.old/src/cflarepy/controllers/: __controllers.py  __init__.py
.old/src/cflarepy/libs/db_lib/: __methods.py  base.py
.old/src/cflarepy/libs/depends/: db_depends.py
.old/src/cflarepy/libs/http_lib/: main.py
applications/project-cli/: pyproject.toml
applications/project-cli/src/cli/: __main__.py
applications/project-cli/src/cli/cf/: main.py  zones.py
applications/project-cli/src/project_cli/: __main__.py  constants.py  db.py  main.py
applications/project-cli/src/project_cli/project/: __init__.py  main.py
applications/project-cli/src/project_cli/project/clean/: __init__.py  clean.py  methods.py
config/: .secrets.toml  settings.toml
config/database/: settings.toml
libs/coreutils-lib/: pyproject.toml
libs/coreutils-lib/src/core_utils/: __init__.py
libs/coreutils-lib/src/core_utils/path_utils/: __init__.py  methods.py
libs/database-lib/: pyproject.toml
libs/database-lib/src/db_lib/: __methods.py
libs/depends-lib/: pyproject.toml
libs/depends-lib/src/depends/: db_depends.py
libs/http-lib/: pyproject.toml
libs/settings-lib/: pyproject.toml
libs/settings-lib/src/settings/: __init__.py  celery_settings.py  db_settings.py
libs/setup-lib/: pyproject.toml
libs/setup-lib/src/setup/: __setup_db.py
notebooks/: nb_config.example.json  proto.ipynb
sandbox/: .gitignore
sandbox/cloudflare/: ctl.py  http_proto.py  proto.py
sandbox/debug/: debug_settings.py
scripts/repo/: lint_rule_files.py
src/cflarepy/: main.py
src/cflarepy/cli/: __init__.py  __main__.py  db.py  main.py
src/cflarepy/cli/cf/: zones.py
src/cflarepy/controllers/: __controllers.py  __init__.py
src/cflarepy/libs/db_lib/: __methods.py
src/cflarepy/libs/depends/: db_depends.py
src/cflarepy/libs/http_lib/: controllers.py
src/cflarepy/libs/settings/: __init__.py  cloudflare_settings.py
src/cflarepy/libs/setup/: __setup_db.py
