[project]
name = "cflarepy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "redjax", email = "none@none.com" }
]
requires-python = ">=3.11"
dependencies = [
    "cloudflare>=4.0.0",
    "cyclopts>=3.3.1",
    "dynaconf>=3.2.7",
    "hishel>=0.1.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "pydantic>=2.10.6",
    "sqlalchemy>=2.0.37",
]

[project.scripts]
cflarepy = "cflarepy:main"

[project.optional-dependencies]
jupyter = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "nox>=2024.10.9",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.3",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.1.0",
]
