[project]
name = "cflarepy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "database-lib",
    "depends-lib",
    "settings-lib",
]

[tool.uv]
dev-dependencies = [
    "nox>=2024.10.9",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.3",
]

[tool.uv.workspace]
members = ["libs/*"]

[tool.uv.sources]
coreutils-lib = { workspace = true }
settings-lib = { workspace = true }
database-lib = { workspace = true }
depends-lib = { workspace = true }
