[project]
name = "cflarepy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cfapi",
    "database-lib",
    "depends-lib",
    "http-lib",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "project-cli",
    "pyarrow>=19.0.0",
    "settings-lib",
    "setup-lib",
]

[tool.uv]
dev-dependencies = [
    "nox>=2024.10.9",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.3",
]

[tool.uv.workspace]
members = ["libs/*", "packages/*", "applications/*"]

[tool.uv.sources]
coreutils-lib = { workspace = true }
settings-lib = { workspace = true }
database-lib = { workspace = true }
depends-lib = { workspace = true }
http-lib = { workspace = true }
setup-lib = { workspace = true }
cfapi = { workspace = true }
project-cli = { workspace = true }
