[project]
name = "project-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cyclopts>=3.3.1",
]

[project.scripts]
hello = "project_cli:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
