[project]
name = "database-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.1",
    "psycopg2-binary>=2.9.10",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.37",
]

[project.scripts]
hello = "database_lib:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages  = ["src/db_lib"]
