[project]
name = "http-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hishel>=0.1.1",
    "httpx>=0.28.1",
]

[project.scripts]
hello = "http_lib:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
