[project]
name = "settings-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dynaconf>=3.2.7",
]

[project.scripts]
hello = "settings_lib:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages  = ["src/settings"]
